src/test/test-models/bad/validate_set_double_locscale_bad4.stan
parameters {
  real<lower=1,scale=-31> a;
  real y;
}

model {
  y ~ normal(0,1);
}
